--- a/styly.scss
+++ b/styly.scss
@@ -904,6 +904,7 @@ footer{
         margin-left: 50%;
         margin-right: 50%;
         transform : translateX(-50%);
+        margin-bottom: 20vh;
         .container-texty
     {
         z-index: 1;
@@ -1106,6 +1107,15 @@ footer{
     {
         img{
             margin-top: -50vh;
+            width: 450px;
+        }
+    }
+    .sluzbydecor
+    {
+        img{
+            width: 450px;
+            float: right;
+            margin-bottom: -25vh;
         }
     }
 
