--- a/styly.scss
+++ b/styly.scss
@@ -134,7 +134,7 @@ header{
 footer{
     bottom: 0;
     left: 0;
-    height: 20vh;
+    height: 25vh;
     width: 100vw;
     background-color: #1E1E1E;
     color: white;
@@ -195,6 +195,7 @@ footer{
         align-items: center;
         justify-content: space-between;
         flex-direction: column;
+        gap: 10vh;
     }
 
     header{
@@ -321,7 +322,7 @@ footer{
         align-items: center;
         background-color: #1E1E1E;
         border-radius: 20px;
-        gap: 5vh;
+        gap: 1vh;
 
         .nadpis{
 
@@ -346,17 +347,40 @@ footer{
     }
 
     .kontakt1{
-        .nadpis
-        {
+        width: 340px;
+        background-color: #1E1E1E;
+        align-items: center;
+        justify-content: center;
+        border-radius: 20px;
+        margin-bottom: auto;
+        gap: 1vh;
+
+ 
+        .nadpis{
+            #char{
+                display: none;
+            }
             h1{ 
                 font-size: 30px;
             }
         }
-        .kontakt2
-        {
-            p
-        {
-            font-size: 25px;
+        .kontakt2{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            a{
+                height: 30px;
+            }
+
+
+            .spolu{
+                display: flex;
+                flex-direction: row;
+                height: 30px;
+            }
+            p{
+            font-size: 20px;
         }
         }
     }
