--- a/styly.scss
+++ b/styly.scss
@@ -938,7 +938,7 @@ footer{
 
         .item
         {
-            background-color: #111;
+            background-color: rgb(17, 17, 17, 0.7);;
             height: auto;
             width: 1100px;
             margin-left: 50%;
@@ -946,6 +946,7 @@ footer{
             transform : translateX(-50%);
             padding: 50px;
             border-radius: 50px;
+            
 
             .container-texty
             {
@@ -966,7 +967,7 @@ footer{
                     height: auto;
                     background-color: #1E1E1E;
                     border-radius: 50px;
-                    
+
                     .podnadpis
                     {
                         color: white;
