--- a/styly.css
+++ b/styly.css
@@ -146,6 +146,7 @@ footer .footerlogo .text {
   .main-onas {
     display: flex;
     max-width: 100vw;
+    min-height: 100%;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
@@ -197,9 +198,6 @@ footer .footerlogo .text {
   header #second-mobile img {
     height: 8vh;
     width: 8vh;
-  }
-  .mobile-absolute {
-    position: static;
   }
   #second {
     display: none;
@@ -268,6 +266,7 @@ footer .footerlogo .text {
     align-items: center;
     justify-content: center;
     border-radius: 20px;
+    margin-top: 12vh;
     margin-bottom: auto;
     gap: 1vh;
   }
@@ -363,17 +362,13 @@ footer .footerlogo .text {
     display: flex;
     flex-direction: column;
     margin-top: 5vh;
+    margin-bottom: 5vh;
     gap: 5vh;
-  }
-  #mobile-item-last {
-    height: auto;
-  }
-  #mobile-item-last .nadpis {
-    margin-top: 5vh;
   }
   .item {
     width: 340px;
-    height: 790px;
+    height: -moz-fit-content;
+    height: fit-content;
     background-color: #1E1E1E;
     border-radius: 25px;
     color: white;
@@ -391,6 +386,8 @@ footer .footerlogo .text {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
   }
   .item .Sluzby-text .nadpis {
     display: flex;
@@ -407,16 +404,20 @@ footer .footerlogo .text {
   }
   .item .Sluzby-text .container-texty .Sluzby-podtext {
     background-color: #111;
-    border-radius: 50px;
+    border-radius: 40px;
     display: grid;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2vh;
   }
   .item .Sluzby-text .container-texty .Sluzby-podtext .podnadpis {
     display: flex;
     justify-content: center;
+    margin-top: 2vh;
   }
   .item .Sluzby-text .container-texty .Sluzby-podtext .podtext-onas {
     justify-self: center;
-    width: 90%;
+    width: 85%;
   }
   .item .Sluzby-text .container-texty .Sluzby-podtext h1 {
     font-size: 20px;
@@ -432,10 +433,11 @@ footer .footerlogo .text {
   .item .Sluzby-text .container-texty .Sluzby-podtext-dlouhy .podnadpis {
     display: flex;
     justify-content: center;
+    margin-top: 2vh;
   }
   .item .Sluzby-text .container-texty .Sluzby-podtext-dlouhy .podtext-onas {
     justify-self: center;
-    width: 90%;
+    width: 85%;
   }
   .item .Sluzby-text .container-texty .Sluzby-podtext-dlouhy h1 {
     font-size: 20px;
