--- a/styly.scss
+++ b/styly.scss
@@ -196,6 +196,7 @@ footer{
     .main-onas{
         display: flex;
         max-width: 100vw;
+        min-height: 100%;
         align-items: center;
         justify-content: space-between;
         flex-direction: column;
@@ -262,10 +263,6 @@ footer{
         }
     }
 
-    .mobile-absolute{
-        position: static;
-        
-    }
 
     #second{
         display: none;
@@ -360,6 +357,7 @@ footer{
         align-items: center;
         justify-content: center;
         border-radius: 20px;
+        margin-top: 12vh;
         margin-bottom: auto;
         gap: 1vh;
 
@@ -494,20 +492,15 @@ footer{
         display: flex;
         flex-direction: column;
         margin-top: 5vh;
+        margin-bottom: 5vh;
         gap: 5vh;
     }
 
-    #mobile-item-last{
-        height: auto;
-        .nadpis{
-            margin-top: 5vh;
 
-        }
-    }
 
     .item{
         width: 340px;
-        height: 790px;
+        height: fit-content;
         background-color: #1E1E1E;
         border-radius: 25px;
         color: white;
@@ -527,6 +520,8 @@ footer{
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 5vh;
+            margin-bottom: 5vh;
 
 
             .nadpis{
@@ -544,15 +539,19 @@ footer{
                 width: 270px;
                 .Sluzby-podtext{
                     background-color: #111;
-                    border-radius: 50px;
+                    border-radius: 40px;
                     display: grid;
+                    align-items: center;
+                    justify-content: space-around;
+                    gap: 2vh;
                     .podnadpis{
                         display: flex;
                         justify-content: center;
+                        margin-top: 2vh;
                     }
                     .podtext-onas{
                         justify-self: center;
-                        width: 90%;
+                        width: 85%;
                     }
                     h1{
                         font-size: 20px;
@@ -568,10 +567,11 @@ footer{
                     .podnadpis{
                         display: flex;
                         justify-content: center;
+                        margin-top: 2vh;
                     }
                     .podtext-onas{
                         justify-self: center;
-                        width: 90%;
+                        width: 85%;
                     }
                     h1{
                         font-size: 20px;
@@ -954,8 +954,7 @@ footer{
             }
         }
     }
-.main-onas
-{
+.main-onas{
     .Onas{
         height: 450px;
         display: flex;
